--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-	"name": "noteful-app",
-	"version": "0.0.1",
-	"license": "MIT",
-	"author": "Chris Klanac",
-	"repository": {
-		"type": "git"
-	},
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"dependencies": {
-		"cors": "^2.8.4",
-		"express": "^4.16.3",
-		"knex": "^0.14.6",
-		"morgan": "^1.9.0",
-		"pg": "^7.4.3"
-	}
+  "name": "noteful-app",
+  "version": "0.0.1",
+  "license": "MIT",
+  "author": "Chris Klanac",
+  "repository": {
+    "type": "git"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "knex": "^0.14.6",
+    "morgan": "^1.9.0",
+    "nodemon": "^1.18.4",
+    "pg": "^7.4.3"
+  }
 }
