--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "test" : "cross-env NODE_ENV=test mocha",
     "start:dev": "nodemon server.js"
   },
   "dependencies": {
@@ -18,5 +19,11 @@
     "morgan": "^1.9.0",
     "nodemon": "^1.18.4",
     "pg": "^7.4.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "cross-env": "^5.2.0",
+    "mocha": "^5.2.0"
   }
 }
